--- a/code-pen-projects/calculator/calculator.html
+++ b/code-pen-projects/calculator/calculator.html
@@ -51,7 +51,15 @@
     }
 
     function clearing() {
-        document.getElementById("answer").innerHTML += "AC";
+        document.getElementById("answer").innerHTML = "";
+    }
+
+    function clears() {
+
+        var id = document.getElementById("answer");
+        var value = id.value;
+        value = value.substring(0, value.length - 1);
+        id.innerHTML = value;
     }
 
     function comma() {
@@ -63,6 +71,7 @@
         var finalAnswer = eval(calculation);
         document.getElementById("answer").innerHTML = finalAnswer;
     }
+
 </script>
 <style>
     #calculator {
@@ -112,39 +121,37 @@
         <div id="calculator">
             <div class="flex-container">
                 <h3> Calculator</h3>
-                    <textarea rows="1" id="answer"></textarea>
-                    <button id="clear" onclick="clearing()"> AC</button>
+                <textarea rows="1" id="answer"></textarea>
+                <button id="clear" onclick="clearing()"> AC</button>
+                <button id="clearsOut" onclick="clears">CE</button>
+                <br>
+                <button onclick="seven()">7 </button>
+                <button onclick="eight()"> 8</button>
+                <button onclick="nine()"> 9</button>
+                <button id="operator" onclick="subtraction()">-</button>
+                </br>
+                <br>
+                <button onclick="four()">4 </button>
+                <button onclick="five()"> 5</button>
+                <button onclick="six()"> 6</button>
+                <button id="operator" onclick="addition()"> +</button>
+                </br>
+                <br>
+                <button onclick="one()">1 </button>
+                <button onclick="two()"> 2</button>
+                <button onclick="three()"> 3</button>
+                <button id="operator" onclick="multiplication()"> x</button>
+                </br>
+                <br>
 
-                    <br>
-                    <button onclick="seven()">7 </button>
-                    <button onclick="eight()"> 8</button>
-                    <button onclick="nine()"> 9</button>
-                    <button id="operator" onclick="subtraction()">-</button>
-                    </br>
-                    <br>
-                    <button onclick="four()">4 </button>
-                    <button onclick="five()"> 5</button>
-                    <button onclick="six()"> 6</button>
-                    <button id="operator" onclick="addition()"> +</button>
-                    </br>
-                    <br>
-                    <button onclick="one()">1 </button>
-                    <button onclick="two()"> 2</button>
-                    <button onclick="three()"> 3</button>
-                    <button id="operator" onclick="multiplication()"> x</button>
-                    </br>
-                    <br>
-                    
-                        <button onclick="zero()">0 </button>
-                        <button onclick="comma()">.</button>
-                        <button id="calc" onclick="equal()"> =</button>
-                        <button id="operator" onclick="division()">÷</button>
-                    </br>
-                
+                <button onclick="zero()">0 </button>
+                <button onclick="comma()">.</button>
+                <button id="calc" onclick="equal()"> =</button>
+                <button id="operator" onclick="division()">÷</button>
+                </br>
+
             </div>
         </div>
     </center>
-
-
 
 </html>
