--- a/code-pen-projects/simon-game.html
+++ b/code-pen-projects/simon-game.html
@@ -1,37 +1,57 @@
 <html>
 
 <script>
+
   var game = {
     count: 0,
-    possibilities: ['#green', '#blue', '#red', '#yellow'],
+    possibilities: ["green", "blue", "red", "yellow"],
+    initialColors: ["#29bf12", "#81d8d0", "#f21b3f", "#ff9914"],
     currentGame: [],
     player: [],
     sound: {
-      blue: new Audio('https://s3.amazonaws.com/freecodecamp/simonSound1.mp3'),
-      red: new Audio('https://s3.amazonaws.com/freecodecamp/simonSound2.mp3'),
-      yellow: new Audio('https://s3.amazonaws.com/freecodecamp/simonSound3.mp3'),
-      green: new Audio('https://s3.amazonaws.com/freecodecamp/simonSound4.mp3')
-    },
-    strict: false,
-  }
+      blue: new Audio("https://s3.amazonaws.com/freecodecamp/simonSound1.mp3"),
+      red: new Audio("https://s3.amazonaws.com/freecodecamp/simonSound2.mp3"),
+      yellow: new Audio("https://s3.amazonaws.com/freecodecamp/simonSound3.mp3"),
+      green: new Audio("https://s3.amazonaws.com/freecodecamp/simonSound4.mp3")
+    }
+    // strict: false,
+  };
 
-  function generateMove() {
-
-    game.currentGame.push(game.possibilities[(Math.floor(Math.random() * 4))]);
-    //alert(game.currentGame.length);
-    showMoves();
-  }
-  function showMoves() {
+  function startGame() {
+    var randomColor = Math.floor(Math.random() * 4);
+    game.currentGame.push(game.possibilities[randomColor]);
     var i = 0;
-    var moves = setInterval(function () {
-      playGame(game.currentGame[i]);
-      i++;
-      if (i >= game.currentGame.length) {
-        clearInterval(moves);
+    var displayColors = setInterval(function () {
+      document.getElementById(game.possibilities[i]).style.background =
+        game.possibilities[i];
+      setTimeout(function () {
+        document.getElementById(game.possibilities[i]).style.background =
+          initialColors[possibilities.indexOf(game.possibilities[i])];
+      }, 2000)
+      i += 1;
+      if (i === game.currentGame.length) {
+        clearInterval(displayColors);
       }
-    }, 600)
+    }, 1000)
 
-    clearPlayer();
+    game.count += 1;
+    document.getElementById("count").innerHTML = game.count;
+
+    console.log("come :" + game.currentGame);
+    console.log("player :" + game.player);
+    console.log("randomColor : " + randomColor)
+  }
+
+  function player(id) {
+    game.player.push(id);
+    if (game.currentGame.length === game.player.length) {
+      if (game.currentGame.toString() !== game.player.toString()) {
+        alert("wrong move");
+      } else {
+        startGame();
+        game.player = [];
+      }
+    }
   }
 
 </script>
@@ -87,6 +107,18 @@
     bottom: 350px;
     position: relative;
   }
+  /* #blue.hover {
+  .onhover(@tiffany-blue);
+}
+
+#green.hover {
+  .onhover(@kelly-green);
+}
+
+#red.hover {
+  .onhover(@red);
+}
+ */
 </style>
 
 <body>
@@ -94,21 +126,24 @@
     <h1> Simon Game </h1>
 
     <div class="fourTable">
-      <button id="blue" onclick="redButton()"></button>
+      <button id="blue" onclick="player('blue')"></button>
     </div>
     <div class="fourTable">
-      <button id="green" onclick="redButton()"></button>
+      <button id="green" onclick="player('green')"></button>
     </div>
     <div class="fourTable">
-      <button id="red" onclick="redButton()"></button>
+      <button id="red" onclick="player('red')"></button>
     </div>
     <div class="fourTable">
-      <button id="yellow" onclick="yellowButton()"></button>
+      <button id="yellow" onclick="player('yellow')"></button>
     </div>
     <div class="buttons">
+
       <button id="startButton" onclick="startGame()">Start!</button>
       <button class="btn btn-warning text-center" data-dismiss="modal" onClick="newGame()"> Reset!</button>
+      <h3 id="count"> </h3>
     </div>
+    <div id="strictLabel">STRICT</div>
   </center>
 </body>
 
