I adjusted the count position to be at the center

--- a/code-pen-projects/simon-game.html
+++ b/code-pen-projects/simon-game.html
@@ -71,6 +71,7 @@
 
   h1 {
     color: white;
+    font-family: Comic ;
   }
 
   #btn_blue {
@@ -125,13 +126,13 @@
 
   #count {
     position: relative;
-    bottom: 40px;
+    bottom: 0px;
   }
 
   #strictLabel {
     position: relative;
     top: 100px;
-    /* background-color:yellow; */
+  
   }
 
   #on {
@@ -167,6 +168,8 @@
       <button id="off" onclick="offButton()">OFF</button>
 
     </center>
+  </div>
+
 </body>
 
 </html>
